bizi/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
* {
  font-family: 'Poppins', sans-serif;
}

.App {
  text-align: center;  
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

#title {
  position: absolute;
  top: 35%;
  left: 50%;
  bottom: 20%;
  transform: translate(-50%, -50%);
  align-self: center;
  font-size: 60px;
  
}

.discover {
  background-color: #385FDC;
  padding: 50px;
}

.discover h1 {
  float: left;
  margin-top: 30px;
  color: white;
  font-size: 2.7em;
}

.discover-cols {
  height: 425px;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  column-gap: 150px;
}

.discover-images-1 {
  position: relative;
}

.discover-images-2 {
  position: relative;
}

.discover-images-3 {
  position: relative;
}

.discover-images-4 {
  position: relative;
}

.discover-cols img {
  width: 100%;
  height: 340px;
  object-fit: cover;
  filter: brightness(60%) blur(1px);
  border-radius: 35px;
  margin-top: 10px;
}

.discover-cols h2 {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  top: 150px;
  font-size: 2em;
  color: white;
}

.read-stories h1 {
  color: #385FDC;
  float: left;
  margin-left: 50px;
  margin-top: 80px;
  font-size: 2.7em;
}

.bus-cols {
  height: auto;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-bottom: 25px;
}

#bus1 {
  position: relative;
}


#bus3 {
  position: relative;
}

.bus-cols img {
  width: 20vw;
  height: 20vw;
  object-fit: cover;
  border-radius: 50%;
  margin-top: 50px;
  position: relative;
}

.bus-cols h2 {
  color: #385FDC;
}

.bus-cols p {
  font-weight: 500;
  font-size: 20px;
  line-height: 1em;
}

.read-stories a {
  width: 100%;
  height: 100%;
}

.read-more-col {
  height: 250px;
  width: 100%;
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.read-more-hands {
  position: relative;
}

.read-more-col img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  margin-top: -35px;
}

.read-more-col h2 {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  top: 90px;
  color: #385FDC;
  border: 5px solid #385FDC;
  border-radius: 25px;
  padding: 25px;
}

.info {
  background-color: #385FDC;
  height: 300px;
  width: 100%;
}

.info h1 {
  color: white;
  font-size: 25px;
  top: 80px;
  margin-top: 20px;
  position: relative;
}
#footer-icons {
  font-size: 2em;    
}
.footer-icon {
  padding-left: 0.2em;
  padding-right: 0.2em;
}
.contact{
  font-weight: 500;
}

#topImage {
  position: relative;
  text-align: center;
  height: 50%;
  margin: 0px 0px 0px 0px;
}

#topImg {
  filter: brightness(50%);
  width: 100%;
  height: 600px;
  object-fit: cover;
}

#searchbar {
  width: 50%;
  height: 35px;
  text-align: center;
  border-radius: 50px;
  font-size: 24px;
  font-family: 'FontAwesome', 'Poppins';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1.25em;
  padding: 0.25em 0.5em;
  margin-top: 2em;  
}
#searchbar::placeholder{
  color: #a5b4e4;
}

nav{
  position: absolute;
  width: 100%;
  z-index: 9999;    
  right: 0;    
  display: flex;
  justify-content: space-between;
}
nav.dark{
  position: relative;
}
nav.dark a{
  color: #385FDC;
  border-style: none;
}

.logo {
  width: 14%;  
  position: absolute;
  margin-right: 500px;
}

nav ul{
  list-style-type: none;
  padding-right: 30px;
  margin: 0;    
}

nav li {
  /* display: inline; */
  text-decoration: none;
  float: right;
  padding: 35px 24px;
}

nav li a{
  text-decoration: none;
  color: white;
  font-size: 1.2em;
}

nav #myAccount {
  width: 120px;
  height: 30px;
  border-radius: 0 0 25px 25px;
  background-color: #385FDC;
}

nav.dark #myAccount a{
  color: white;
}

.active {
  width: 80px;
  padding-top: 29px;
  border-top: 6px solid;
  border-top-color: #385FDC;
}

.description {
  display: flex;  
  text-align: left;
  padding: 2.5em;
}

.description p{
  font-size: 1.2em;
}
.textbox{
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.map {
  text-align: center;
  padding: 30px;
  width: 60%;
  flex: 1.33;
  /* height: 900px; */
}
.pin {
  position: absolute;
  width: 100px;
  height: 100px;
  top: -50px;
  left: -50px;
  text-align: center;
  color: #385FDC;  
  font-weight: bold;
  padding: 4px;  
}

.pin-icon{
  font-size: 6em;
}
.pin-text{
  font-size: 2em;
}

.description-text {
  width: 40%;
  padding: 10px 20px;
  flex: 1;
}
  
.description-text button{
  background-color: #83cb7b;
  color: white;
  border: none;
  border-radius: 30px;
  text-align: center;
  width: 90%;
  padding: 10px 28px;
  font-size: 20px;
  font-weight: bold;
  display: table-cell;
  align-items: center;
}
.right {
  font-size: 2em;
}

.textbox h2{
  font-size: 2em;
}
.center-text {
  vertical-align: middle;
}
.icon{
  padding: 0 7px;
}

.right, .description-text a, .name, .thumbsUp {
  color: #263EE7;  
  text-decoration: none;
}

.icon-text {
  display: flex;
  align-items: center;
}
.icon-text .action{
  font-size: 1.9em;
  flex: 1;
}
.icon-text p{
  flex: 9;  
}


.question, .action {
  color: #dee6f9;
  text-align: center;
}

.review1{
  background-color: #dee6f9;
  padding: 10px 20px;
  border-radius: 30px;
  display: flex;
  align-items: center;
}
.review1 .thumbsUp {
  flex: 1;
}
.review1 div{
  flex: 9;
}
.story-header {
  padding: 0em 6em;
  font-size: 4em;
}

.business {  
  background-color: #dee6f9;
  padding: 4em;
}

.business-wrapper {
  display: flex;
  width: 100%;
  align-items: center;
}

.business-text {
  flex: 1;
}
.business .yogaImg {
  flex: 2;
}
.yogaImg img{
  width: 90%;
  border-radius: 2em;   
}

.business h2 {
  color: #385FDC;
  font-size: 2em;
  margin-bottom: 0;
}
.business h3 {
  color: #6e6767;
  margin-top: 0.5em;
}
.business p{
  line-height: 1.5;
  text-align: left;
  margin-top: 2em;
  text-indent: 2em;
}
.business button {
  background-color: #dee6f9;
  color: #385FDC;
  border: 3px solid #385FDC;
  border-radius: 1em;
  padding: 0.5em 1em;
  font-size: 1.25em;
  align-self: center;  
  font-weight: bold;    
}
.circles {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 3em;
}
.circle {
  background: white;
  border-radius: 50%;
  width: 15px;
  height: 15px;  
  margin-left: 0.75em;
  display: block;
}
.blueCircle{
  background: #385FDC;
}
.picRow {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(1, 1fr);
}

#blank1 {
  opacity: .2;
}

#blank2 {
  opacity: .4;
}

#blank3 {
  opacity: .6;
}

.picCol {
  position: relative;
}

#picCol1 img{
  margin-left: 4.46vw;
}

#picCol3 img{
  margin-right: 4.46vw;
}

.picCol img {
  width: 30vw;
  height: 30vw;
  object-fit: cover;
  position: relative;
  margin-top: -10px;
}

#stories-search {
  color: #385FDC;
  text-align: center;
  font-size: 2.7em;
  top: 50;
}

#searchbar2 {
  background-color: #dee6f9;
  color: #a5b4e4;
  font-family: "FontAwesome", 'Poppins', sans-serif;  
  width: 85%;
  top: 50%;
  border-radius: 50px;
  border: none;
  font-size: 1.25em;
  padding: 0.75em 1.25em;
  margin-top: 1em;
  margin-bottom: 3em;  
}
#searchbar2::placeholder{
  color: #a5b4e4;
}

